# upat_eye_model

./: .dir-locals.el  .gitignore  readme.org
doc/: Makefile  abstract.txt  manuscript.tex  mylibrary.bib
doc/arxiv/: ms.bbl  ms.tex
model/: UPAT_Eye_Model_Passive_Pulleys_v1.osim  UPAT_Eye_Model_Passive_Pulleys_v2.osim  UPAT_Eye_Model_Passive_Pulleys_v3.osim  UPAT_Eye_Model_Passive_Pulleys_v3_Controls.sto  UPAT_Eye_Model_Passive_Pulleys_v3_State_h15v0kv0.sto  UPAT_Eye_Model_Passive_Pulleys_v3_States.sto  UPAT_Eye_Model_Passive_Pulleys_v3_States[-15][15].sto  UPAT_Eye_Model_Passive_Pulleys_v3_States[15][-15].sto  UPAT_Eye_Model_Passive_Pulleys_v3_Statesh-15v-15kv0.sto  UPAT_Eye_Model_Passive_Pulleys_v4.osim  UPAT_Eye_Model_Passive_Pulleys_v4_Controls_v4.sto  UPAT_Eye_Model_Passive_Pulleys_v4_States_v4.sto  plot_results.py  readme.org
model/backup_opensim_v3.3/: UPAT_Eye_Model_Passive_Pulleys_v3.osim  UPAT_Eye_Model_Passive_Pulleys_v3_Controls.sto  UPAT_Eye_Model_Passive_Pulleys_v3_Statesh-15v15kv0.sto  UPAT_Eye_Model_Passive_Pulleys_v3_Statesh0v15kv0.sto  readme.org
model/blender/: Eyeball.blend
release/: FixationController_rd.lib  buildinfo.txt
release/v4.0/: FixationController_rd.lib
report/: Eye_Model_(with_Comments).docx  Eye_Model_Project_Report.docx
source_code/: CMakeLists.txt
source_code/src/fixation_controller_plugin/: FixationController.cpp  FixationController.h
source_code/src/fixation_controller_plugin/internal/: RegisterPlugin.cpp
source_code/src/include/: Settings.h  Settings.h.in
source_code/src/simulation/: CMakeLists.txt  Simulation.cpp
source_code_opensim_v3.3/: CMakeLists.txt
source_code_opensim_v3.3/src/fixation_controller_plugin/: FixationController.cpp  FixationController.h
source_code_opensim_v3.3/src/simulation/: Simulation.cpp
source_code_opensim_v4.0/: CMakeLists.txt
source_code_opensim_v4.0/src/: CMakeLists.txt
source_code_opensim_v4.0/src/fixation_controller_plugin/: CMakeLists.txt
source_code_opensim_v4.0/src/fixation_controller_plugin/internal/: RegisterPlugin.cpp
source_code_opensim_v4.0/src/include/: Settings.h
source_code_opensim_v4.0/src/simulation/: Simulation.cpp
